src/objects/StudentTermBreak__c.object
<CustomObject>
    <description>Imported term break information</description>
    <fields>
        <fullName>Code__c</fullName>
        <description>The leave code</description>
        <label>Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveTermCode__c</fullName>
        <description>The term code when this will be effective</description>
        <label>Effective Term Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>The end date of the term break</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PIDM__c</fullName>
        <description>The student&apos;s PIDM</description>
        <label>PIDM</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>The start date of the term break</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The student lookup for this Term Break record</description>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>TermBreaks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <description>Unique id for the record</description>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <label>Student Term Break</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Term Break Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Term Breaks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>